# AdventOfCode

./: .gitignore  README.md
2024/day_01/: description.txt  main.py
2024/day_02/: main.py
2024/day_05/: .gitignore
2024/day_05/src/: main.rs
2024/day_06/: description.txt  main.jl
2024/day_07/: main.jl
2024/day_08/: main.jl
2024/day_09/: layout.py  main.py
2024/day_10/: main.jl
2024/day_11/: Cargo.toml
2024/day_11/src/: main.rs
2024/day_12/: main.jl
2024/day_13/: main.jl
2024/day_14/: description.txt  main.jl
2024/day_15/: main.jl
2024/day_16/: main.jl
2024/day_17/: CMakeLists.txt  challenge2.hh  compile.sh  compile_commands.json  main.cc  program.cc  program.hh
2024/day_18/: main.jl
2024/day_19/src/: main.rs
2024/day_20/: main.jl
2024/day_21/: main.py
2024/day_22/src/: main.rs
2024/day_23/src/: main.rs
2024/day_24/: Cargo.toml
2024/day_24/src/: main.rs
2024/day_25/: input.txt
2024/day_25/src/: main.rs
2025/day_01/: description.txt  main.py
2025/day_02/: description.txt  main.py
2025/day_03/: main.py
2025/day_04/: main.py
2025/day_05/: main.py
2025/day_06/: main.py
2025/day_07/: main.py
2025/day_08/: main.py
day_01/challenge_1/: main.py
day_03/: CMakeLists.txt  ParserFSA.cc  ParserFSA.hh  compile.sh  main.cc
day_04/: main.jl
